...
                bucket.startMillis.toShortDateText(resources),
                resources.getString(R.string.value_percent_0, bucket.innerRatio * 100),
            )
        }
    })
    ChartWithYAxis(
        labels = listOf("100%", "50%", "0%"),
        buckets = buckets,
        description = description,
        modifier = modifier,
    ) {
        val gridColor = colors.unknown.copy(alpha = 0.28f)
        listOf(0f, size.height / 2f, size.height).forEach { y ->
...
